--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-slick": "^0.30.2",
-    "sass": "^1.77.0"
+    "sass": "^1.77.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
